<resources>
    <string name="app_name">OJService</string>
    <string name="mainheadtxt">Odd Jobs and Services </string>

    <string name="emailtxt">Email</string>
    <string name="passwordtxt">Password</string>
    <string name="loginbtn">Login</string>
    <string name="registerbtn">Register</string>
    <string name="forgotpassbtn">Forgot your Password?</string>

    <string name="detailstxtv">Enter Your Details Below</string>
    <string name="fnametxt">First Name </string>
    <string name="snametxt">Surname </string>
    <string name="fladdesstxt">Frist line Address </string>
    <string name="towntxt"> Town</string>
    <string name="postcodetxt">Postcode </string>
    <string name="phonenumtxt">Phone </string>
    <string name="dateobtxt">dd/mm/yyyy</string>
    <string name="nextbtn">NEXT</string>

    <string name="disregsetxt">Almost Done</string>
    <string name="resEmail">Enter Email</string>
    <string name="resPassword">Enter Password</string>
    <string name="resPassword2">Re-Enter Password</string>
    <string name="uploadbtn">Upload your Photo </string>
    <string name="fileupload">Your Image </string>
    <string name="discrpttxt">A few Words to describe yourself</string>
    <string name="subbtn">SUBMIT</string>
    <string name="rebottomtxt">easy jobs for easy people</string>


    <string name="custRbtn">I need a BabySitter</string>
    <string name="babysitRbtn">I am a BabySitter</string>
    <string name="femaleRbtn">Female</string>
    <string name="maleRbtn">Male</string>


    <string-array name="intialspin">
        <item> Mr  </item>
        <item> Mrs </item>
        <item> Miss </item>
        <item> Other </item>
    </string-array>
    <string-array name="dayspin">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>13</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
</string-array>
    <string-array name="monthspin">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="yearspin">
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
        <item>1984</item>
        <item>1983</item>
        <item>1982</item>
        <item>1981</item>
        <item>1980</item>
        <item>1979</item>
        <item>1978</item>
        <item>1977</item>
        <item>1976</item>
        <item>1975</item>
        <item>1974</item>



    </string-array>






</resources>
