<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper">


    <Button
        android:id="@+id/subbtn"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/roundedgeedittext"
        android:gravity="center"
        android:text="@string/subbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/fnametxt"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="FirstName"
        android:background="@drawable/roundedgeedittext"
        android:gravity="center"
        android:hint="@string/fnametxt"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/snametxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/snametxt"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="SurName"
        android:background="@drawable/roundedgeedittext"
        android:gravity="center"
        android:hint="@string/snametxt"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/fladdresstxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fnametxt"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/fladdresstxt"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="First line Address"
        android:background="@drawable/roundedgeedittext"
        android:gravity="center"
        android:hint="@string/fladdesstxt"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/towntxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/snametxt"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/towntxt"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="Town"
        android:background="@drawable/roundedgeedittext"
        android:gravity="center"
        android:hint="@string/towntxt"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/postcodetxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fladdresstxt"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/numbertxt"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="Phone Number"
        android:background="@drawable/roundedgeedittext"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/phonenumtxt"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/resEmailtxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postcodetxt"
        tools:targetApi="o" />


    <EditText
        android:id="@+id/postcodetxt"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="Postcode"
        android:background="@drawable/roundedgeedittext"
        android:gravity="center"
        android:hint="@string/postcodetxt"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/numbertxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/towntxt"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/resEmailtxt"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="Email"
        android:background="@drawable/roundedgeedittext"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/resEmail"
        android:inputType="textEmailAddress"
        android:text="@string/resEmail"
        app:layout_constraintBottom_toTopOf="@+id/resPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numbertxt"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/resPassword"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="Password"
        android:background="@drawable/roundedgeedittext"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/resPassword"
        android:inputType="textPassword"
        android:text="@string/resPassword"
        app:layout_constraintBottom_toTopOf="@+id/resPassword2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resEmailtxt"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/resPassword2"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="Password"
        android:background="@drawable/roundedgeedittext"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/resPassword2"
        android:inputType="textPassword"
        android:text="@string/resPassword2"
        app:layout_constraintBottom_toTopOf="@+id/subbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resPassword"
        tools:targetApi="o" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="8dp"
        android:background="#0A2429"
        android:gravity="center"
        android:text="@string/detailstxtv"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/fnametxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>