<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D23429B4"
    android:orientation="vertical">


    <Button
        android:id="@+id/nextbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:layout_marginBottom="24dp"
        android:background="#0A2429"
        android:text="@string/nextbtn"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataobtxt" />

    <EditText
        android:id="@+id/fnametxt"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="FirstName"
        android:background="#FFFFFF"
        android:hint="@string/fnametxt"
        android:inputType="text"
        android:text="@string/fnametxt"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/snametxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/snametxt"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="SurName"
        android:background="#FFFFFF"
        android:hint="@string/snametxt"
        android:inputType="text"
        android:text="@string/snametxt"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/fladdresstxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fnametxt"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/towntxt"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="Town"
        android:background="#FFFFFF"
        android:hint="@string/towntxt"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/postcodetxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fladdresstxt"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/postcodetxt"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="Postcode"
        android:background="#FFFFFF"
        android:hint="@string/postcodetxt"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/numbertxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/towntxt"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/numbertxt"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="Phone Number"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/phonenumtxt"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/dataobtxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postcodetxt"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/detailstxtv"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        android:layout_marginBottom="16dp"
        android:background="#0A2429"
        android:gravity="center"
        android:text="@string/detailstxtv"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fladdresstxt"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="FirstName"
        android:background="#FFFFFF"
        android:hint="@string/fnametxt"
        android:inputType="text"
        android:text="@string/fnametxt"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/towntxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/snametxt"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/dataobtxt"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="FirstName"
        android:background="#FFFFFF"
        android:hint="@string/fnametxt"
        android:inputType="text"
        android:text="@string/fnametxt"
        android:textSize="14sp"

        app:layout_constraintBottom_toTopOf="@+id/nextbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numbertxt"
        tools:targetApi="o" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/fnametxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailstxtv" />


</androidx.constraintlayout.widget.ConstraintLayout>